--- a/configpanel/res/values/colors.xml
+++ b/configpanel/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="theme_primary">@*android:color/primary_device_default_dark</color>
     <color name="theme_primary_dark">@*android:color/primary_dark_device_default_dark</color>
     <color name="theme_accent">@*android:color/accent_device_default_light</color>
+	<color name="dashboard_icon_color">#FFFFFFFF</color>
 </resources>
